--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,10 @@ h1 {
 }
 
 .header-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     width: 100%;
     text-align: center;
