--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,7 @@ h1 {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     width: 100%;
     text-align: center;
+    height: 50px;
     padding: 10px;
 }
 
