Refs #16: Added a select box to select the region

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,6 +31,16 @@ h1 {
     padding: 10px;
 }
 
+.cases-container {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+#area {
+    width: 60%;
+}
+
 .content-container {
     display: flex;
     grid-gap: 20px;
